@@ -1,5 +1,5 @@
 Package: oligo
-Version: 1.7.19
+Version: 1.7.21
 Title: Tools for low-level analysis of oligonucleotide arrays.
 Author: Benilton Carvalho <bcarvalh@jhsph.edu>, Rafael A. Irizarry and Ben Bolstad with contributions from Vince Carey, Robert Gentleman, Wolfgang Huber
 Maintainer: Benilton Carvalho <bcarvalh@jhsph.edu>
@@ -31,4 +31,4 @@ Collate: AllGenerics.R
          methods-genotype.R
          m2snp6.R
 LazyLoad: Yes
-biocViews: Microarray, OneChannel, TwoChannel, Preprocessing
+biocViews: Microarray, OneChannel, TwoChannel, Preprocessing, SNP, DifferentialExpression, DNAMethylation, ExonArray, GeneExpression
