@@ -1,80 +1,52 @@
 setMethod("rma", "ExonFeatureSet",
-          function(object, background=TRUE, normalize=TRUE, subset=NULL, level="exon", verbose=TRUE){
-            level <- match.arg(level, c("exon", "gene"))
+          function(object, background=TRUE, normalize=TRUE, subset=NULL){
             conn <- db(object)
-
-            if (verbose) message("RMA on Exon arrays at the ", level, " level.")
-
-            ## The grouping variable (exon/gene) below will be called 'grp'
-            ## Select featuresets with the following conditions:
-            ##  level = core (1)  (from featureSet)
-            ##  xhyb = unique (1) (from featureSet)
-            ##  probeset maps to only one gene accession
-            if (level == "exon"){
-              sql <- paste("SELECT fid, exon_id as grp",
-                           "FROM pmfeature",
-                           "INNER JOIN featureSet",
-                           "USING(fsetid)",
-                           "WHERE level=1 AND crosshyb_type=1")
-              featureInfo <- dbGetQuery(conn, sql)
-              rm(sql)
-              featureInfo <- featureInfo[order(featureInfo[["grp"]]),]
-              rownames(featureInfo) <- NULL
-              featureInfo[["grp"]] <- as.character(featureInfo[["grp"]])
-            } else if (level == "gene"){
-              sql <- paste("SELECT DISTINCT featureSet.fsetid, accession as grp",
-                           "FROM featureSet, fset2gene, gene",
-                           "WHERE level=1 AND crosshyb_type=1 AND",
-                           "featureSet.fsetid=fset2gene.fsetid AND",
-                           "fset2gene.gid=gene.gid",
-                           "GROUP BY featureSet.fsetid",
-                           "HAVING COUNT(DISTINCT accession)=1")
-              coreGenesUnique <- dbGetQuery(conn, sql)
-              coreGenesUnique <- coreGenesUnique[order(coreGenesUnique[["fsetid"]]),]
-              rm(sql)
-
-              pmProbesSql <- paste("SELECT fid, pmfeature.fsetid",
-                                   "FROM pmfeature",
-                                   "INNER JOIN featureSet",
-                                   "USING(fsetid)",
-                                   "WHERE level=1 AND crosshyb_type=1")
-              pmProbes <- dbGetQuery(conn, pmProbesSql)
-              rm(pmProbesSql)
-              idx <- which(pmProbes[["fsetid"]] %in% coreGenesUnique[["fsetid"]])
-              pmProbes <- pmProbes[idx,]
-              rm(idx)
-              featureInfo <- merge(pmProbes, coreGenesUnique,
-                                   by.x="fsetid", by.y="fsetid")[, c("fid", "grp")]
-              rm(coreGenesUnique, pmProbes)
-            } else {
-              stop("Unknown level selected: ", level)
-            }
-
-            ## Remove groups with less than 4 probes
-            toRemove <- table(featureInfo[["grp"]])
-            toRemove <- names(toRemove[toRemove < 4])
-            if (verbose) message("Removing ", length(toRemove), " ", level, "s for not having at least 4 probes.")
-            toRemove <- which(featureInfo[["grp"]] %in% toRemove)
-            featureInfo <- featureInfo[-toRemove,]
-            rm(toRemove)
-            
-            pnVec <- featureInfo[["grp"]]
-            ngenes <- length(unique(pnVec))
+            sql <- paste("SELECT fid, fsetid FROM pmfeature")
+            featureInfo <- dbGetQuery(conn, sql)
+            featureInfo <- featureInfo[order(featureInfo[["fsetid"]]),]
+            rownames(featureInfo) <- NULL
             pms <- exprs(object)[featureInfo[["fid"]],, drop=FALSE]
+            dimnames(pms) <- NULL
+            theExprs <- basicRMA(pms,
+                                 as.character(featureInfo[["fsetid"]]),
+                                 length(unique(featureInfo[["fsetid"]])),
+                                 normalize, background)
+            rm(pms)
 
-            bg.dens <- function(x){density(x,kernel="epanechnikov",n=2^14)}
-
-            exprs <- basicRMA(pms, pnVec, ngenes, normalize, background)
+            ## Getting exon and gene info to add to featureData
+            sql <- paste("SELECT fsetid, exon_id, transcript_cluster_id,",
+                         "level, crosshyb_type, chrom",
+                         "FROM featureSet")
+            fromFSetTable <- dbGetQuery(conn, sql)
+            sql <- paste("SELECT fsetid, group_concat(accession) as accessions",
+                         "FROM fset2gene",
+                         "INNER JOIN gene USING(gid)",
+                         "GROUP BY fsetid")
+            fromFSet2Gene <- dbGetQuery(conn, sql)
+            fromFSet2Gene[["accessions"]] <- sapply(strsplit(fromFSet2Gene[["accessions"]], ","),
+                                                    function(x) paste(sort(x), collapse=","))
+            probesets <- merge(fromFSetTable, fromFSet2Gene, by="fsetid", all.x=TRUE)
+            rm(sql, fromFSetTable, fromFSet2Gene)
+            idx <- probesets[["fsetid"]] %in% unique(featureInfo[["fsetid"]])
+            probesets <- probesets[idx,]
+            rm(idx)
             
+            descs <- c("probeset id", "exon id", "transcript cluster id",
+                       "level", "cross hybridization type", "chromosome",
+                       "accessions")
+            vmd <- data.frame(labelDescription=descs)
+            rm(descs)
+            rownames(probesets) <- as.character(probesets[["fsetid"]])
+            tmp <- new("AnnotatedDataFrame", data=probesets,
+                       varMetadata=vmd)
+            rm(vmd, probesets)
+
             out <- new("ExpressionSet",
+                       featureData=tmp,
                        phenoData=phenoData(object),
                        annotation=annotation(object),
                        experimentData=experimentData(object),
-                       exprs=exprs)
-
-            tmp <- preproc(object)
-            tmp[["analysis"]] <- paste("RMA:", level, "level")
-            preproc(out) <- tmp
+                       exprs=theExprs)
             rm(tmp)
             return(out)
           })
